--- a/src/main/angular/src/app/home/home.component.html
+++ b/src/main/angular/src/app/home/home.component.html
@@ -1,12 +1,33 @@
-﻿<div class="col-md-6 col-md-offset-3">
+<div class="col-lg-12">
     <h1>Hi {{currentUser.firstName}}!</h1>
     <p>You're logged in with Angular 2!!</p>
     <h3>All registered users:</h3>
-    <ul>
+   <!--  <ul>
         <li *ngFor="let user of users">
             {{user.username}} ({{user.firstName}} {{user.lastName}})
             - <a (click)="deleteUser(user.id)">Delete</a>
+            <span class="btn btn-primary" (click)="updateUser(user)">update</span>
+            <span class="btn btn-danger" [routerLink]="['/details-page']">Details Page</span>
         </li>
-    </ul>
-    <p><a [routerLink]="['/login']">Logout</a></p>
+    </ul> -->
+    
+	<table class="table table-striped">
+		<tr><th>User</th>	
+			<th>User</th>
+			<th>password</th>
+			<th>Delete</th>
+			<th>update</th>
+			<th>Details	Page</th>
+		</tr>
+		<tr *ngFor="let user of users">
+		<td>{{user.username}}</td>
+			<td>{{user.username}}</td>
+			<td>{{user.password}}</td>
+			<td><span class="btn btn-primary" (click)="deleteUser(user.id)">Delete</span></td>
+			<td><span class="btn btn-primary" (click)="updateUser(user)">update</span></td>
+			<td><span class="btn btn-danger" [routerLink]="['/details-page']">Details
+					Page</span></td>
+		</tr>
+	</table>
+	<p><a [routerLink]="['/login']">Logout</a></p>
 </div>
